--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"axios": "^1.3.4"
+		"axios": "^1.3.4",
+		"chart.js": "^4.2.1",
+		"leaflet": "^1.9.3"
 	}
 }
