--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@rollup/plugin-commonjs": "24.0.1",
+		"@rollup/plugin-node-resolve": "15.0.1",
+		"@rollup/plugin-typescript": "11.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"@tsconfig/svelte": "3.0.0",
+		"rollup": "3.17.3",
+		"rollup-plugin-svelte": "7.1.3",
+		"svelte": "3.55.1",
+		"svelte-check": "^3.0.4",
+		"svelte-preprocess": "5.0.1",
+		"tslib": "2.5.0",
+		"typescript": "4.9.5",
+		"vite": "^4.1.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.3.4",
 		"chart.js": "^4.2.1",
+		"jquery": "^3.6.3",
 		"leaflet": "^1.9.3"
 	}
 }
