--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"axios": "^1.3.4",
 		"chart.js": "^4.2.1",
 		"jquery": "^3.6.3",
-		"leaflet": "^1.9.3"
+		"leaflet": "^1.9.3",
+		"sweetalert2": "^11.7.3"
 	}
 }
