--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@tsconfig/svelte": "3.0.0",
+		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
 		"rollup": "3.17.3",
 		"rollup-plugin-svelte": "7.1.3",
 		"svelte": "3.55.1",
