--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@rollup/plugin-node-resolve": "15.0.1",
 		"@rollup/plugin-typescript": "11.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.5.0",
 		"@tsconfig/svelte": "3.0.0",
 		"prettier": "^2.8.4",
