--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.0.1",
 		"axios": "^1.3.4",
 		"chart.js": "^4.2.1",
 		"sweetalert2": "^11.7.3"
