--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@vercel/analytics": "^1.0.1",
 		"axios": "^1.3.4",
 		"chart.js": "^4.2.1",
+		"leaflet": "^1.7.1",
 		"sweetalert2": "^11.7.3"
 	}
 }
