--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"@vercel/analytics": "^1.0.1",
 		"axios": "^1.3.4",
 		"chart.js": "^4.2.1",
-		"sweetalert2": "^11.7.3"
+		"html2pdf.js": "^0.10.3",
+		"sweetalert2": "^11.7.3",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	}
 }
